@@ -2,6 +2,6 @@ include $(top_srcdir)/common.mk
 
 moduledir = $(guilemoduledir)/overrides
 
-module_DATA = gnome-vfs.defs
+module_DATA = gnome-vfs.defs gnome-vfs.defs-type-ignores
 
 EXTRA_DIST = $(module_DATA)
